--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ fastapi==0.124.4
 greenlet==3.3.0
 h11==0.16.0
 idna==3.11
-jwt==1.4.0
 psycopg2-binary==2.9.11
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
+PyJWT==2.10.1
 python-dotenv==1.1.1
 SQLAlchemy==2.0.45
 starlette==0.50.0
