--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+certifi==2025.11.12
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
@@ -15,8 +17,10 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.10.1
 python-dotenv==1.1.1
+requests==2.32.5
 SQLAlchemy==2.0.45
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.2
 uvicorn==0.38.0
